package nsysu.util.enumtype;

public interface asTarget {
    String getStr();
}
