@startuml
enum nsysu.util.enumtype.StatusType {
+  Active
+  Frozen
+  Closed
- String str
+ String getStr()
+ {static} boolean checkMatch(String,StatusType)
}


class nsysu.util.sqlaccess.UserData {
+ {static} String getUserName(String)
+ {static} String getRole(String)
+ {static} List<String> getAccount(String)
+ {static} String getPassword(String)
+ {static} String getStatue(String)
+ {static} String addAccount(String,AccountType)
+ {static} void setPassword(String,String)
+ {static} void deactiveUser(String)
+ {static} void deleteUser(String)
+ {static} String addNewUser(String,String,RoleType)
+ {static} String getIdByName(String)
+ {static} void setStatue(String,StatusType)
}

class nsysu.util.mongodb.MongoDBUtil {
- {static} MongoCollection<Document> accountsCollection
- {static} MongoCollection<Document> usersCollection
- {static} Random random
- {static} MongoCollection<Document> getCollection(CollectionType)
+ {static} T getData(CollectionType,String,asTarget,Class<T>)
+ {static} void setData(CollectionType,String,asTarget,T)
+ {static} void updateData(CollectionType,String,asTarget,T)
+ {static} void addToList(CollectionType,String,asTarget,T)
- {static} String genUniqueId(MongoCollection<Document>,String)
+ {static} String addNewUser(String,String,RoleType)
+ {static} boolean deleteData(CollectionType,String)
+ {static} String addNewAccount(String,AccountType)
+ {static} void addNewHistory(String,double,String,String)
+ {static} String getIdByName(String)
}


enum nsysu.util.mongodb.CollectionType {
+  USERS
+  ACCOUNTS
}

enum nsysu.util.enumtype.AccountType {
+  SavingsAccount
+  TimeDeposit
+  CheckingAccount
+  USDAccount
- String str
+ String getStr()
}


class nsysu.util.exception.ClosedUserException {
}
interface nsysu.util.enumtype.asTarget {
~ String getStr()
}

class nsysu.util.exception.NegativeBalanceException {
}
class nsysu.util.exception.IdNotFindException {
}
enum nsysu.util.enumtype.RoleType {
+  User
+  Administrator
- String str
+ String getStr()
}


enum nsysu.util.enumtype.AccountTarget {
+  Balance
+  TimeOfLastView
+  Type
+  Status
+  History
- String str
+ String getStr()
}


class nsysu.util.sqlaccess.AccountData {
+ {static} String getType(String)
+ {static} double getBalance(String)
+ {static} Date getLastView(String)
+ {static} List<HistoryRecord> getHistory(String)
+ {static} String getStatus(String)
+ {static} void incBalance(String,double)
+ {static} void setLastView(String)
+ {static} void addOneHistory(String,double,String,String)
+ {static} void setStatus(String,StatusType)
}

class nsysu.util.exception.TargetNotFindException {
}
class nsysu.util.exception.SameUserNameException {
}
enum nsysu.util.enumtype.UserTarget {
+  UserName
+  Password
+  Role
+  Status
+  Accounts
- String str
+ String getStr()
}




nsysu.util.exception.RuntimeException <|-- nsysu.util.exception.ClosedUserException
nsysu.util.exception.RuntimeException <|-- nsysu.util.exception.NegativeBalanceException
nsysu.util.exception.RuntimeException <|-- nsysu.util.exception.IdNotFindException
nsysu.util.exception.RuntimeException <|-- nsysu.util.exception.TargetNotFindException
nsysu.util.exception.RuntimeException <|-- nsysu.util.exception.SameUserNameException
@enduml